@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.1.3
 
 1)  Process routestopped during 'check'
 
+2)  Apply Jesse Shrieve's patch for SNAT range.
+
 Changes in Shorewall 4.4.1.2
 
 1)  Re-initialize chain table before generating 'stop_firewall()'
